# llmplayground

./: .coverage  .gitignore  README.md  environment.yml  pyproject.toml
notebooks/: insurance.ipynb  joke.ipynb  quickstart.ipynb
src/llmplayground/: quickstart.py
tests/llmplayground/: conftest.py  test_quickstart.py
